rewrite services with tests and grpc
