# services/domains/api.go
@@ -1,165 +1,0 @@
-package domains
-
-import (
-	"errors"
-	"net/http"
-	"projectmanager/internal/jsonapi"
-	"projectmanager/pkg/db"
-
-	"github.com/gin-gonic/gin"
-	"go.uber.org/zap"
-	"gorm.io/gorm"
-)
-
-type Service struct {
-	Repo        *Repository
-	Logger      *zap.Logger
-	itemPerPage int
-}
-
-// DomainRequest create or update domain request
-type DomainRequest struct {
-	Title   string `form:"title" json:"title" xml:"title" binding:"required"`
-	Address string `form:"address" json:"address" xml:"address" binding:"required"`
-}
-
-// DomainResponse create or update domain request
-type DomainResponse struct {
-	UUID    string `json:"uuid" xml:"uuid"`
-	Title   string `form:"title" json:"title" xml:"title"`
-	Address string `form:"address" json:"address" xml:"address"`
-}
-
-func NewService(router *gin.Engine, repo *Repository, logger *zap.Logger) {
-
-	service := &Service{
-		Repo:        repo,
-		Logger:      logger,
-		itemPerPage: 10,
-	}
-
-	router.POST("/domains", service.CreateHandler)
-	router.PUT("/domains/:uuid", service.UpdateHandler)
-	router.GET("/domains", service.RetrieveHandler)
-	router.GET("/domains/:uuid", service.GetHandler)
-	router.DELETE("/domains/:uuid", service.DeleteHandler)
-}
-
-func (s *Service) CreateHandler(c *gin.Context) {
-	var json DomainRequest
-	if err := c.ShouldBindJSON(&json); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	item, err := s.Repo.Create(json)
-	if err != nil {
-		if db.IsBadRequestErr(err) {
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-			return
-		}
-		s.Logger.Error("create domain failed with error %s", zap.Error(err))
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	jsonapi.Single(http.StatusOK, c, item)
-}
-
-func (s *Service) UpdateHandler(c *gin.Context) {
-	var json DomainRequest
-	if err := c.ShouldBindJSON(&json); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	itemUUID := c.Param("uuid")
-	if itemUUID == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "uuid not provided"})
-		return
-	}
-
-	item, err := s.Repo.Update(itemUUID, json)
-	if err != nil {
-		if errors.Is(err, gorm.ErrRecordNotFound) {
-			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-			return
-		}
-		if db.IsBadRequestErr(err) {
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-			return
-		}
-		s.Logger.Error("update domain failed with error %s", zap.Error(err))
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	jsonapi.Single(http.StatusOK, c, item)
-}
-
-func (s *Service) GetHandler(c *gin.Context) {
-
-	itemUUID := c.Param("uuid")
-	if itemUUID == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "uuid not provided"})
-		return
-	}
-
-	item, err := s.Repo.GetByUUID(itemUUID)
-	if err != nil {
-		if errors.Is(err, gorm.ErrRecordNotFound) {
-			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-			return
-		}
-		if db.IsBadRequestErr(err) {
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-			return
-		}
-		s.Logger.Error("retrieve domain failed with error %s", zap.Error(err))
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	jsonapi.Single(http.StatusOK, c, item)
-}
-
-func (s *Service) RetrieveHandler(c *gin.Context) {
-
-	offset, limit, err := jsonapi.PaginationQuery(c, s.itemPerPage)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	items, totalCount, err := s.Repo.Retrieve(offset, limit)
-	if err != nil {
-		if db.IsBadRequestErr(err) {
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-			return
-		}
-		s.Logger.Error("retrieve domains failed with error %s", zap.Error(err))
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	jsonapi.List(http.StatusOK, c, items, offset, limit, totalCount)
-}
-
-func (s *Service) DeleteHandler(c *gin.Context) {
-	itemUUID := c.Param("uuid")
-	if itemUUID == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "uuid not provided"})
-		return
-	}
-	err := s.Repo.Delete(itemUUID)
-	if err != nil {
-		if errors.Is(err, gorm.ErrRecordNotFound) {
-			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-			return
-		}
-		if db.IsBadRequestErr(err) {
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-			return
-		}
-		s.Logger.Error("delete domain failed with error %s", zap.Error(err))
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	c.JSON(http.StatusNoContent, nil)
-}
