# services/tasks/api.go
@@ -1,136 +1,77 @@
 package tasks
 
 import (
-	"net/http"
-	"projectmanager/internal/jsonapi"
-
-	"github.com/gin-gonic/gin"
-	"go.uber.org/zap"
+	"context"
+	"github.com/gogo/protobuf/types"
+	"github.com/grpc-ecosystem/grpc-gateway/runtime"
+	"github.com/mirzakhany/pm/pkg/grpcgw"
+	tasks "github.com/mirzakhany/pm/services/tasks/proto"
+	"google.golang.org/grpc"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
 )
 
-type Service struct {
-	Repo        *Repository
-	Logger      *zap.Logger
-	itemPerPage int
+type API interface {
+	grpcgw.Controller
+	tasks.TaskServiceServer
 }
 
-// TaskRequest create or update task request
-type TaskRequest struct {
-	Title    string `form:"title" json:"title" xml:"title" binding:"required"`
-	SprintID int    `form:"sprintId" json:"sprintId" xml:"sprint" binding:"required"`
-	Estimate string `form:"estimate" json:"estimate" xml:"estimate" binding:"required"`
-	Status   string `form:"status" json:"status" xml:"status" binding:"required"`
-	Assignee string `form:"assignee" json:"assignee" xml:"assignee" binding:"required"`
+type api struct {
+	service Service
 }
 
-// TaskRequest create or update task request
-type TaskResponse struct {
-	UUID     string `json:"uuid" xml:"uuid"`
-	Title    string `json:"title" xml:"title"`
-	Sprint   string `json:"sprintId" xml:"sprintID"`
-	Estimate string `json:"estimate" xml:"estimate"`
-	Status   string `json:"status" xml:"status"`
-	Assignee string `json:"assignee" xml:"assignee"`
+func (a api) InitRest(ctx context.Context, conn *grpc.ClientConn, mux *runtime.ServeMux) {
+	cl := tasks.NewTaskServiceClient(conn)
+	_ = tasks.RegisterTaskServiceHandlerClient(ctx, mux, cl)
 }
 
-func NewService(router *gin.Engine, repo *Repository, logger *zap.Logger) {
-
-	service := &Service{
-		Repo:        repo,
-		Logger:      logger,
-		itemPerPage: 20,
-	}
-
-	router.POST("/tasks", service.CreateHandler)
-	router.PUT("/tasks/:uuid", service.UpdateHandler)
-	router.GET("/tasks", service.RetrieveHandler)
-	router.GET("/tasks/:uuid", service.GetHandler)
-	router.DELETE("/tasks/:uuid", service.DeleteHandler)
+func (a api) InitGrpc(ctx context.Context, server *grpc.Server) {
+	tasks.RegisterTaskServiceServer(server, a)
 }
 
-func (s *Service) CreateHandler(c *gin.Context) {
-	var json TaskRequest
-	if err := c.ShouldBindJSON(&json); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	item, err := s.Repo.Create(json)
+func (a api) ListTasks(ctx context.Context, request *tasks.ListTasksRequest) (*tasks.ListTasksResponse, error) {
+	offset, limit := grpcgw.GetOffsetAndLimit(request.Offset, request.Limit)
+	res, err := a.service.Query(ctx, offset, limit)
 	if err != nil {
-		s.Logger.Error("create task failed with error %s", zap.Error(err))
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
+		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
-	jsonapi.Single(http.StatusOK, c, item)
+	return res, err
 }
 
-func (s *Service) UpdateHandler(c *gin.Context) {
-	var json TaskRequest
-	if err := c.ShouldBindJSON(&json); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	itemUUID := c.Param("uuid")
-	if itemUUID == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "uuid not provided"})
-		return
-	}
-
-	item, err := s.Repo.Update(itemUUID, json)
+func (a api) GetTask(ctx context.Context, request *tasks.GetTaskRequest) (*tasks.Task, error) {
+	res, err := a.service.Get(ctx, request.Uuid)
 	if err != nil {
-		s.Logger.Error("update item failed with error %s", zap.Error(err))
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
+		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
-	jsonapi.Single(http.StatusOK, c, item)
+	return res, err
 }
 
-func (s *Service) GetHandler(c *gin.Context) {
-
-	itemUUID := c.Param("uuid")
-	if itemUUID == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "uuid not provided"})
-		return
-	}
-
-	item, err := s.Repo.GetByUUID(itemUUID)
+func (a api) CreateTask(ctx context.Context, request *tasks.CreateTaskRequest) (*tasks.Task, error) {
+	res, err := a.service.Create(ctx, request)
 	if err != nil {
-		s.Logger.Error("retrieve task failed with error %s", zap.Error(err))
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
+		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
-	jsonapi.Single(http.StatusOK, c, item)
+	return res, err
 }
 
-func (s *Service) RetrieveHandler(c *gin.Context) {
-
-	offset, limit, err := jsonapi.PaginationQuery(c, s.itemPerPage)
+func (a api) UpdateTask(ctx context.Context, request *tasks.UpdateTaskRequest) (*tasks.Task, error) {
+	res, err := a.service.Update(ctx, request)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
+		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
-
-	items, totalCount, err := s.Repo.GetTasks(offset, limit)
-	if err != nil {
-		s.Logger.Error("retrieve tasks failed with error %s", zap.Error(err))
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	jsonapi.List(http.StatusOK, c, items, offset, limit, totalCount)
+	return res, err
 }
 
-func (s *Service) DeleteHandler(c *gin.Context) {
-	itemUUID := c.Param("uuid")
-	if itemUUID == "" {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "uuid not provided"})
-		return
-	}
-	err := s.Repo.Delete(itemUUID)
+func (a api) DeleteTask(ctx context.Context, request *tasks.DeleteTaskRequest) (*types.Empty, error) {
+	_, err := a.service.Delete(ctx, request.Uuid)
 	if err != nil {
-		s.Logger.Error("delete task failed with error %s", zap.Error(err))
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
+		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
-	c.JSON(http.StatusNoContent, nil)
+	return &types.Empty{}, err
+}
+
+func New(srv Service) API {
+	s := api{service: srv}
+	grpcgw.RegisterController(s)
+	return s
 }
